==> zklouc/STM32_bracelet_Primary/STM32_Bracelet/Hardware/Max30102.c <==
#include "stm32f10x.h"                  // Device header
#include "MAX30102.h"
#include "delay.h"

void MAX30102_WriteReg(uint8_t RegAddress, uint8_t Data)
{
	I2C_GenerateSTART(I2C1, ENABLE);										//硬件I2C生成起始条件
	MAX30102_WaitEvent(I2C1, I2C_EVENT_MASTER_MODE_SELECT);					//等待EV5
	
	I2C_Send7bitAddress(I2C1, I2C_WRITE_ADDR, I2C_Direction_Transmitter);	//硬件I2C发送从机地址，方向为发送
	MAX30102_WaitEvent(I2C1, I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED);	//等待EV6
	
	I2C_SendData(I2C1, RegAddress);											//硬件I2C发送寄存器地址
	MAX30102_WaitEvent(I2C1, I2C_EVENT_MASTER_BYTE_TRANSMITTING);			//等待EV8
	
	I2C_SendData(I2C1, Data);												//硬件I2C发送数据
	MAX30102_WaitEvent(I2C1, I2C_EVENT_MASTER_BYTE_TRANSMITTED);				//等待EV8_2
	
	I2C_GenerateSTOP(I2C1, ENABLE);											//硬件I2C生成终止条件
}

uint8_t MAX30102_ReadReg(uint8_t RegAddress)
{
	uint8_t Data;
	
	I2C_GenerateSTART(I2C1, ENABLE);										//硬件I2C生成起始条件
	MAX30102_WaitEvent(I2C1, I2C_EVENT_MASTER_MODE_SELECT);					//等待EV5
	
	I2C_Send7bitAddress(I2C1, I2C_WRITE_ADDR, I2C_Direction_Transmitter);	//硬件I2C发送从机地址，方向为发送
	MAX30102_WaitEvent(I2C1, I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED);	//等待EV6
	
	I2C_SendData(I2C1, RegAddress);											//硬件I2C发送寄存器地址
	MAX30102_WaitEvent(I2C1, I2C_EVENT_MASTER_BYTE_TRANSMITTED);				//等待EV8_2
	
	I2C_GenerateSTART(I2C1, ENABLE);										//硬件I2C生成重复起始条件
	MAX30102_WaitEvent(I2C1, I2C_EVENT_MASTER_MODE_SELECT);					//等待EV5
	
	I2C_Send7bitAddress(I2C1, I2C_READ_ADDR, I2C_Direction_Receiver);		//硬件I2C发送从机地址，方向为接收
	MAX30102_WaitEvent(I2C1, I2C_EVENT_MASTER_RECEIVER_MODE_SELECTED);		//等待EV6
	
	I2C_AcknowledgeConfig(I2C1, DISABLE);									//在接收最后一个字节之前提前将应答失能
	I2C_GenerateSTOP(I2C1, ENABLE);											//在接收最后一个字节之前提前申请停止条件
	
	MAX30102_WaitEvent(I2C1, I2C_EVENT_MASTER_BYTE_RECEIVED);				//等待EV7
	Data = I2C_ReceiveData(I2C1);											//接收数据寄存器
	
	I2C_AcknowledgeConfig(I2C1, ENABLE);									//将应答恢复为使能，为了不影响后续可能产生的读取多字节操作
	
	return Data;
}

void MAX30102_Init(void)
{
	/*开启时钟*/
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_I2C1, ENABLE);		//开启I2C1的时钟
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB, ENABLE);		//开启GPIOB的时钟
	
	/*GPIO初始化*/
	GPIO_InitTypeDef GPIO_InitStructure;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_OD;
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_6 | GPIO_Pin_7;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(GPIOB, &GPIO_InitStructure);					//将PB6和PB7引脚初始化为复用开漏输出
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB,ENABLE);	
	GPIO_InitStructure.GPIO_Pin  = GPIO_Pin_5;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IPU;
	GPIO_InitStructure.GPIO_Speed= GPIO_Speed_50MHz;
 	GPIO_Init(GPIOB, &GPIO_InitStructure);  //配置INT中断引脚
	
	
//	//配置INT引脚为外部中断
//	/*AFIO选择中断引脚*/
//	GPIO_EXTILineConfig(GPIO_PortSourceGPIOB, GPIO_PinSource5);//将外部中断的14号线映射到GPIOB，即选择PB14为外部中断引脚
//	
//	/*EXTI初始化*/
//	EXTI_InitTypeDef EXTI_InitStructure;						//定义结构体变量
//	EXTI_InitStructure.EXTI_Line = EXTI_Line5;					//选择配置外部中断的14号线
//	EXTI_InitStructure.EXTI_LineCmd = ENABLE;					//指定外部中断线使能
//	EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;			//指定外部中断线为中断模式
//	EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Rising;		//指定外部中断线为下降沿触发
//	EXTI_Init(&EXTI_InitStructure);								//将结构体变量交给EXTI_Init，配置EXTI外设
//	
//	/*NVIC中断分组*/
//	NVIC_PriorityGroupConfig(NVIC_PriorityGroup_2);				//配置NVIC为分组2
//																//即抢占优先级范围：0~3，响应优先级范围：0~3
//																//此分组配置在整个工程中仅需调用一次
//																//若有多个中断，可以把此代码放在main函数内，while循环之前
//																//若调用多次配置分组的代码，则后执行的配置会覆盖先执行的配置
//	
//	/*NVIC配置*/
//	NVIC_InitTypeDef NVIC_InitStructure;						//定义结构体变量
//	NVIC_InitStructure.NVIC_IRQChannel = EXTI9_5_IRQn;		//选择配置NVIC的EXTI15_10线
//	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;				//指定NVIC线路使能
//	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0;	//指定NVIC线路的抢占优先级为1
//	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;			//指定NVIC线路的响应优先级为1
//	NVIC_Init(&NVIC_InitStructure);								//将结构体变量交给NVIC_Init，配置NVIC外设
	
	/*I2C初始化*/
	I2C_InitTypeDef I2C_InitStructure;						//定义结构体变量
	I2C_InitStructure.I2C_Mode = I2C_Mode_I2C;				//模式，选择为I2C模式
	I2C_InitStructure.I2C_ClockSpeed = 40000;				//时钟速度，选择为50KHz
	I2C_InitStructure.I2C_DutyCycle = I2C_DutyCycle_2;		//时钟占空比，选择Tlow/Thigh = 2
	I2C_InitStructure.I2C_Ack = I2C_Ack_Enable;				//应答，选择使能
	I2C_InitStructure.I2C_AcknowledgedAddress = I2C_AcknowledgedAddress_7bit;	//应答地址，选择7位，从机模式下才有效
	I2C_InitStructure.I2C_OwnAddress1 = 0x00;				//自身地址，从机模式下才有效
	I2C_Init(I2C1, &I2C_InitStructure);						//将结构体变量交给I2C_Init，配置I2C1
	GPIO_WriteBit(GPIOB,GPIO_Pin_5,Bit_SET);
	
	/*I2C使能*/
	I2C_Cmd(I2C1, ENABLE);									//使能I2C1，开始运行
	
	MAX30102_Reset();//复位
	//确保设备在开始正常工作之前处于一个干净、一致的状态，避免因之前的状态或错误配置导致的问题
	
	MAX30102_WriteReg(REG_INTR_ENABLE_1,0xc0);	// INTR setting
	MAX30102_WriteReg(REG_INTR_ENABLE_2,0x00);  //禁用所有中断
	MAX30102_WriteReg(REG_FIFO_WR_PTR,0x00);  	//FIFO_WR_PTR[4:0]，写指针寄存器 REG_FIFO_WR_PTR 清零，确保从头开始读写FIFO
	MAX30102_WriteReg(REG_OVF_COUNTER,0x00);  	//OVF_COUNTER[4:0]，溢出计数器寄存器清零
	MAX30102_WriteReg(REG_FIFO_RD_PTR,0x00);  	//FIFO_RD_PTR[4:0]，读指针寄存器清零
	
	MAX30102_WriteReg(REG_FIFO_CONFIG,0x2f);  	//sample avg = 2, fifo rollover=false, fifo almost full = 17
	MAX30102_WriteReg(REG_MODE_CONFIG,0x03);  	//0x02 for Red only, 0x03 for SpO2 mode 0x07 multimode LED，使用红光和红外光测量血氧饱和度
	MAX30102_WriteReg(REG_SPO2_CONFIG,0x2B);  	// SPO2_ADC range = 4096nA, SPO2 sample rate (200 Hz),LED pulseWidth (400uS)  最后以100hz填充FIFO
	MAX30102_WriteReg(REG_LED1_PA,0x32);   	//Choose value for ~ 10mA for LED1
	MAX30102_WriteReg(REG_LED2_PA,0x32);   	// Choose value for ~ 10mA for LED2
	MAX30102_WriteReg(REG_PILOT_PA,0x7f);   	// Choose value for ~ 25mA for Pilot LED
}
